feat: implement custom nullstring as sqlc output
